name:                hcloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vonavi/hcloud#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2017 Vladimir Ivanov
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hcloud
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
