name:                hcloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vonavi/hcloud#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2017 Vladimir Ivanov
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hcloud
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parameters
                       Raft
                       Types
  default-language:    Haskell2010
  build-depends:       base                    >=4.7  && <5
                     , distributed-process     >=0.6  && <0.7
                     , distributed-process-p2p >=0.1  && <0.2
                     , optparse-applicative    >=0.13 && <0.14
  ghc-options:         -Wall
                       -O2
                       -threaded
