name:                hcloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vonavi/hcloud#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2017 Vladimir Ivanov
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hcloud
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parameters
                       Raft
                       Raft.Candidate
                       Raft.Follower
                       Raft.Leader
                       Raft.Types
                       Raft.Utils
                       Types
  default-language:    Haskell2010
  build-depends:       async                             >=2.1  && <2.2
                     , base                              >=4.7  && <5
                     , binary                            >=0.8  && <0.9
                     , bytestring                        >=0.10 && <0.11
                     , containers                        >=0.5  && <0.6
                     , distributed-process               >=0.6  && <0.7
                     , distributed-process-monad-control >=0.5  && <0.6
                     , lifted-base                       >=0.2  && <0.3
                     , monad-control                     >=1.0  && <1.1
                     , network-transport                 >=0.4  && <0.5
                     , network-transport-tcp             >=0.5  && <0.6
                     , optparse-applicative              >=0.13 && <0.14
                     , random                            >=1.1  && <1.2
                     , random-shuffle                    >=0.0  && <0.1
                     , stm                               >=2.4  && <2.5
                     , time                              >=1.6  && <1.7
                     , transformers                      >=0.5  && <0.6
  ghc-options:         -Wall
                       -O2
                       -threaded
